<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_color"
    android:contentDescription="@string/scroll">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="45dp"
            android:layout_height="43dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="139dp"
            android:contentDescription="@string/rect_img_dsk"
            android:src="@drawable/ic_rectangle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="28dp"
            android:text="@string/hello"
            android:textColor="@color/white"
            android:textSize="42sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="9dp"
            android:text="@string/lets_introduce"
            android:textColor="@color/hint_color"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="38dp"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="37dp"
            android:src="@drawable/ic_user_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:contentDescription="@string/userImg" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="37dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/full_name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textColorHint="@color/hint_color"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:ignore="LabelFor" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="38dp"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="44dp"
            android:src="@drawable/ic_user_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            android:contentDescription="@string/userImg" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="48dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textColorHint="@color/hint_color"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
            tools:ignore="LabelFor" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/appCompatButton"
            android:layout_width="58dp"
            android:layout_height="58dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="64dp"
            android:background="@drawable/back_btn"
            android:contentDescription="@string/back_btn"
            android:drawableStart="@drawable/ic_shape"
            android:paddingStart="21dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="245dp"
            android:layout_height="58dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="64dp"
            android:background="@drawable/next_btn_style"
            android:contentDescription="@string/next_btn"
            android:drawableStart="@drawable/ic_next_btn"
            android:paddingStart="91dp"
            app:layout_constraintStart_toEndOf="@+id/appCompatButton"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>

